Notification list IMT updates

--- a/app/views/psd-cases-area/notifications/add-another-business.html
+++ b/app/views/psd-cases-area/notifications/add-another-business.html
@@ -67,10 +67,10 @@
     Save and continue
   </button>
 
-  <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  <!-- <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Save as draft
   </a>
-
+ -->
 </div>
 </div>
  <input class="govuk-checkboxes__input" id="section-3-complete" name="section-3-complete" type="checkbox" value="yes" { checked('section-3-complete','yes') }} checked>
