--- a/app/views/psd-cases-area/notifications/add-another-corrective-action.html
+++ b/app/views/psd-cases-area/notifications/add-another-corrective-action.html
@@ -71,10 +71,10 @@
     Save and continue
   </button>
 
-  <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  <!-- <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Save as draft
   </a>
-
+ -->
 </div>
 </div>
 
