--- a/app/views/psd-cases-area/notifications/add-another-test-report.html
+++ b/app/views/psd-cases-area/notifications/add-another-test-report.html
@@ -68,9 +68,9 @@
     Save and continue
   </button>
 
-  <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  <!-- <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Save as draft
-  </a>
+  </a> -->
 
 </div>
 </div>
