--- a/app/views/psd-cases-area/notifications/corrective-actions.html
+++ b/app/views/psd-cases-area/notifications/corrective-actions.html
@@ -582,7 +582,7 @@
 
  <div class="govuk-button-group govuk-!-margin-top-6">
   <button class="govuk-button" data-module="govuk-button">
-    Save and continue
+    Add corrective action
   </button>
 
   <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
