--- a/app/views/psd-cases-area/notifications/image-upload.html
+++ b/app/views/psd-cases-area/notifications/image-upload.html
@@ -78,7 +78,7 @@
 
 <br/>
       <button class="govuk-button" data-module="govuk-button">
-  Save and finish image upload
+  Add images
 </button>
 
 
