--- a/app/views/psd-cases-area/notifications/no-corrective-actions-message.html
+++ b/app/views/psd-cases-area/notifications/no-corrective-actions-message.html
@@ -18,7 +18,7 @@
  <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form govuk-!-margin-bottom-6" action="check-submit" method="post">
+      <form class="form govuk-!-margin-bottom-6" action="task-list" method="post">
 
        <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -33,7 +33,7 @@
 
     <div class="govuk-button-group govuk-!-margin-top-6">
   <button class="govuk-button" data-module="govuk-button">
-    Continue to notification submission 
+   Return to the task list
   </button>
 
 
@@ -42,6 +42,8 @@
 
 
     </div>
+
+    <input class="govuk-checkboxes__input" id="section-4g-complete" name="section-4g-complete" type="checkbox" value="yes" { checked('section-4g-complete','yes') }} checked>
 
   </form>
 
