--- a/app/views/psd-cases-area/notifications/notification-details.html
+++ b/app/views/psd-cases-area/notifications/notification-details.html
@@ -87,7 +87,7 @@
           <input id="case_is_safe" name="investigation[case_is_safe]" type="radio" value="no" class="govuk-radios__input">
             {% if checked("section-1a-complete", "yes") %}
 
-            <label class="govuk-label govuk-radios__label" for="case_is_safe">Product are unsafe or non-compliant</label>
+            <label class="govuk-label govuk-radios__label" for="case_is_safe">Products are unsafe or non-compliant</label>
 
             {% else %}
             <label class="govuk-label govuk-radios__label" for="case_is_safe">A product is unsafe or non-compliant</label>
