--- a/app/views/psd-cases-area/notifications/product-choice-assessment.html
+++ b/app/views/psd-cases-area/notifications/product-choice-assessment.html
@@ -25,7 +25,7 @@
 
     <span class="govuk-caption-l">{{title}}</span>
       <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-4">
-        Select a product to a risk assessment
+        Select a product for a risk assessment
       </h1>
     </legend>
 
