--- a/app/views/psd-cases-area/notifications/product-identification.html
+++ b/app/views/psd-cases-area/notifications/product-identification.html
@@ -169,9 +169,9 @@
     Save and complete tasks in this section
   </button>
 
-  <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  <!-- <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Save as draft
-  </a>
+  </a> -->
 
 </div>
 
