--- a/app/views/psd-cases-area/notifications/risk-level-existing.html
+++ b/app/views/psd-cases-area/notifications/risk-level-existing.html
@@ -25,7 +25,7 @@
     <p class="govuk-body">It can differ from risk assessments if necessary - such as when there are conflicting assessments, or where the assessment was provided by a third party.</p>
 
     <div class="govuk-inset-text">
-      A risk assessment has been completed for the All in All+ Car Seat, Dragon Kingdom CT4262, indicating a <strong class="govuk-tag govuk-tag--red">
+      A risk assessment has been completed for the <b>All in All+ Car Seat, Dragon Kingdom CT4262</b>, indicating a <strong class="govuk-tag govuk-tag--red">
          High risk
         </strong> level. The notification's risk level has been aligned with this assessment. If needed, you have the option to adjust the risk level.
     </div>
@@ -40,7 +40,7 @@
 <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" aria-describedby="">
     <legend class="govuk-fieldset__legend ">
-        Notification risk level
+      <h2 class="govuk-heading-m">Notification risk level</h2>
 </legend>
 
   <div class="govuk-radios" data-module="govuk-radios">
@@ -90,12 +90,12 @@
 
       <div class="govuk-button-group govuk-!-margin-top-6">
   <button class="govuk-button" data-module="govuk-button">
-    Save and continue
+    Add risk level
   </button>
 
-  <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  <!-- <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Save as draft
-  </a>
+  </a> -->
 
 </div>
 </div>
