--- a/app/views/psd-cases-area/notifications/risk-level.html
+++ b/app/views/psd-cases-area/notifications/risk-level.html
@@ -37,7 +37,7 @@
 <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" aria-describedby="">
     <legend class="govuk-fieldset__legend ">
-        Case risk level
+      <h2 class="govuk-heading-m">Notification risk level</h2>
 </legend>
 
   <div class="govuk-radios" data-module="govuk-radios">
@@ -81,13 +81,32 @@
       </div>
 
 </div>
+
 </fieldset>
+
 </div>
 
 
+<h2 class="govuk-heading-m">Has the risk level been validated?</h2>
+
+<div class="govuk-radios govuk-radios" data-module="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="changedName" name="changedName" type="radio" value="yes">
+        <label class="govuk-label govuk-radios__label" for="changedName">
+          Yes
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="changedName-2" name="changedName" type="radio" value="no">
+        <label class="govuk-label govuk-radios__label" for="changedName-2">
+          No
+        </label>
+      </div>
+    </div>
+
       <div class="govuk-button-group govuk-!-margin-top-6">
   <button class="govuk-button" data-module="govuk-button">
-    Save and continue
+    Add risk level
   </button>
 
   <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
