--- a/app/views/psd-cases-area/notifications/test-results.html
+++ b/app/views/psd-cases-area/notifications/test-results.html
@@ -286,12 +286,12 @@
 
      <div class="govuk-button-group govuk-!-margin-top-6">
   <button class="govuk-button" data-module="govuk-button">
-    Save and continue
+    Add test report
   </button>
 
-  <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+  <!-- <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Save as draft
-  </a>
+  </a> -->
 
 </div>
  </div>
