--- a/app/views/psd-cases-area/notifications/add-assessment.html
+++ b/app/views/psd-cases-area/notifications/add-assessment.html
@@ -19,17 +19,15 @@
   <div class="govuk-grid-column-full">
 
       <span class="govuk-caption-l">{{title}}</span>
-      <h1 class="govuk-heading-l">Create or add risk assessment</h1>
+      <h1 class="govuk-heading-l">Add risk assessment</h1>
       <div class="govuk-inset-text">
         <p class="govuk-body">For</p>
         <p class="govuk-body-l">All in All+ Car Seat, Dragon Kingdom CT4262</p>
       </div>
       <h2 class="govuk-heading-m">Related risk assessments</h2>
-        <p class="govuk-body">There are no risk assessments for All in All+ Car Seat, Dragon Kingdom CT4262. You can start a new assessment.</p>
-      <a class="govuk-button govuk-button data-module="govuk-button" role="button" draggable="false" href="../../prism/question-serious-risk-al-v3">Start a new risk assessment</a>
-</form>    <p class="govuk-body">
-      <a href="attach-risk-assessment" class="govuk-link">Attach existing risk assessment</a>
-    </p>
+        <p class="govuk-body">There are no risk assessments for All in All+ Car Seat, Dragon Kingdom CT4262. To conduct a new risk assessment, use the 'Risk Assessments' section of the Product Safety Database.</p>
+      <a class="govuk-button govuk-button data-module="govuk-button" role="button" draggable="false" href="attach-risk-assessment">Attach existing risk assessment</a>
+</form> 
   </div>
 </div>
 
