--- a/app/views/psd-cases-area/notifications/confirmation.html
+++ b/app/views/psd-cases-area/notifications/confirmation.html
@@ -18,7 +18,7 @@
         html: "Notification reference number<br><strong>2308-00025</strong>"
       }) }}
 
-      <p>Your sucessfully submitted a notification for <a href="../../psd-revised-flow/product-page">All in All+ Car Seat, Dragon Kingdom CT4262</a>.</p>
+      <p>You have successfully submitted the notification for <a href="../../psd-revised-flow/product-page">All in All+ Car Seat, Dragon Kingdom CT4262</a>.</p>
 
       <h2 class="govuk-heading-m">
         Next steps
@@ -27,13 +27,14 @@
 
         <ul class="govuk-list">
 
-          <li><a href="edit-submitted" class="govuk-link">View or edit</a> the submitted product safety notification</li>
+          <li> Make changes or update the information in your recently submitted safety notification.</li>
 
-               <li><a href="notifications-dashboard" class="govuk-link">View or edit </a> all your draft and submitted notifications</li>
+          <a href="edit-submitted" class="govuk-link">Edit submitted notification</a> <br/><br/>
+
+               <li>View or edit any of your existing draft or submitted notifications to ensure all information is accurate and up-to-date.</li>
+
+               <a href="notifications-dashboard" class="govuk-link">Manage Notifications</a>
                </ul>
-
-
-
 
     </div>
   </div>
