--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -920,27 +920,27 @@ noscript {
 }
 
 .govuk-summary-card {
-    margin-bottom: 20px;
-    border: 1px solid #b1b4b6;
+  margin-bottom: 20px;
+  border: 1px solid #b1b4b6;
 }
 
 .govuk-summary-card__title-wrapper {
-    padding: 7px 12px 0 12px;
-    border-bottom: 1px solid #0000;
-    background-color: #f3f2f1;
+  padding: 7px 12px 0;
+  border-bottom: 1px solid #00000000;
+  background-color: #f3f2f1;
 }
 
 .govuk-summary-card__title {
-    font-family: GDS Transport,arial,sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-weight: 700;
-    font-size: 1.2rem;
-    line-height: 1.25;
-    color: #0b0c0c;
-    margin: 5px 20px 10px 0;
+  font-family: "GDS Transport", arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 700;
+  font-size: 1.2rem;
+  line-height: 1.25;
+  color: #0b0c0c;
+  margin: 5px 20px 10px 0;
 }
 
 .govuk-summary-card__content {
-    padding: 15px 15px 0;
+  padding: 15px 15px 0;
 }
